--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +6,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+    height: 100vh;
+    background: linear-gradient(45deg, rgba(21,45,130,1) 0%, rgba(135,48,121,1) 100% );
+    background-repeat:no-repeat;
+    background-size: cover;
+
 }
 
 code {
